--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
-    <p id="blueBackground">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore aliquid molestiae labore nostrum commodi accusamus odit, quis blanditiis placeat, explicabo libero culpa quae cumque. Natus ad ut quas eum!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita dolore aliquid molestiae labore nostrum commodi accusamus odit, quis blanditiis placeat, explicabo libero culpa quae cumque. Natus ad ut quas eum!</p>
 </body>
 </html>
